--- a/10_networks.Rmd
+++ b/10_networks.Rmd
@@ -1,47 +1,3 @@
-```{r include=FALSE, cache=FALSE}
-# # Reproducability --------------------------------------------------------------
-# 
-# # fix random numbers
-# set.seed(1014)
-# 
-# 
-# # knitr chunk options ----------------------------------------------------------
-# 
-knitr::opts_chunk$set(
-  comment = "#>",
-  collapse = TRUE,
-  cache = FALSE,
-  out.width = "98%",
-  fig.align = 'center',
-  fig.width = 7,
-  fig.asp = 0.5,  # was: 0.618 (1 / phi)
-  fig.show = "hold",
-  message = FALSE,
-  warning = FALSE
-)
-# 
-# options(width = 120)
-# 
-# 
-# # standard libraries -----------------------------------------------------------
-library(ggplot2)
-library(emaph)
-# 
-# 
-# # theming ----------------------------------------------------------------------
-# 
-# # avoid long pint-out of numeric variables
-# #options(digits = 3)
-# 
-# # avoid long print-outs of tables
-# #options(dplyr.print_min = 6, dplyr.print_max = 6)
-# 
-# # common theme of all ggplot images
-# #theme_set(theme_bw(12))
-# 
-# 
-```
-
 # Fitting Networks {#networks}
 \index{Symptom networks}
 
@@ -67,7 +23,7 @@ Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu. Vestibulu
 
 
 ```{r network, fig.cap = "Simulated timeseries of 5 variables"}
-# code snippet 9.1: Fitting symptom networks
+# Code snippet 10.1: Fitting symptom networks.
 library(ggplot2)
 library(graphicalVAR)
 library(dplyr)
@@ -92,7 +48,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue 
 
 
 ```{r fig.asp = .3, fig.cap = "Partial Contemporaneous Correlations (left) and Partial Directed Correlations (right)."}
-# code snippet 9.2: plotting symptom networks
+# Code snippet 10.2: plotting symptom networks
 Res <- graphicalVAR(data = d,     gamma = 0, 
                     nLambda = 10, verbose = FALSE)
 
@@ -115,7 +71,7 @@ Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu. Vestibulu
 - Outstrength
 
 ```{r fig.asp = .25, fig.cap = "Centrality plot of Partial Contemporaneous (top) and Directed (bottom) Correlations."}
-# code snippet 9.3: Node Centrality plots
+# Code snippet 10.3: Node Centrality plots.
 library(qgraph)
 centralityPlot(qgraph(Res$PCC, DoNotPlot = TRUE))
 centralityPlot(qgraph(Res$PDC, DoNotPlot = TRUE))
@@ -129,7 +85,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.  
 
 ```{r mlvarcode}
-# code snippet 9.4: Fitting symptom networks of multiple subjects
+# Code snippet 10.4: Fitting symptom networks of multiple subjects.
 library("mlVAR")
 library(methods)
 
@@ -144,7 +100,7 @@ fit1 <- mlVAR(Model$Data,          vars = Model$vars,
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu. Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque null aut massa tempor, ac dapibus dui viverra. 
 
 ```{r fig.cap = "True (left) vs estimated (right) contemporaneous  (top), temporal (middle) and between-subject relationships (bottom)", fig.asp = .6}
-# code snippet 9.5: plotting symptom networks of multiple subjects
+# Code snippet 10.5: plotting symptom networks of multiple subjects.
 layout(matrix(c(1:6), ncol = 2, byrow = TRUE))
 
 plot(Model, "contemporaneous", layout = "circle", verbose = FALSE)
